# monkai

./: .gitignore  CLAUDE.md  README.md  book_builder.py  claude.sh  codex.sh  config.yaml  crawler.py  devbox.json  gemini.sh  indexer.py  mcp.canonical.example.json  mcp_settings.json  models.py  parser.py  pipeline.py  pyproject.toml  validate.py
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-environment-setup.md  1-4-core-utilities-package.md  1-5-unit-tests-for-core-utilities.md  2-1-crawler-cli-shell-robots-txt-compliance.md  (+43 more)
apps/onedrive-sync/: .gitignore  _shared.py  categories.py  compose.py  dedup.py  extract.py  manifest.py  publish.py  pyproject.toml  rclone.py  report.py  sync.py
apps/onedrive-sync/tests/: test_categories.py  test_compose.py  test_dedup.py  test_extract.py  test_manifest.py  test_publish.py  test_pull.py  test_report.py  test_shared.py
apps/onedrive-sync/tests/fixtures/: sample.epub
crawler/: models.py  pipeline.py
docs/: ke-hoach-thu-vien-kinh-phat.md  multi-source-library-spec.md
scripts/: sync-mcp-config.mjs
tests/: conftest.py  test_api_adapter.py  test_api_models.py  test_book_builder.py  test_catalog_fetch.py  test_crawl_state_integration.py  test_crawler.py  test_deduplication.py  test_download.py  test_e2e_pipeline.py  test_indexer.py  test_metadata_schema.py  test_parser.py  test_robots.py
utils/: api_adapter.py  logging.py  robots.py  slugify.py
(+388 files in other folders)
