[project]
name = "onedrive-sync"
version = "0.1.0"
description = "OneDrive epub import pipeline for monkai"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
    "pydantic>=2.12.5",
    "lxml>=5.3.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
exclude = [".devbox", ".venv"]
